--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^2.2.2",
     "fs": "0.0.1-security",
     "graphql": "^14.0.2",
+    "graphql-fields": "^1.3.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.12",
     "path": "^0.12.7",
