--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,10 @@ typings/
 
 # FuseBox cache
 .fusebox/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
