--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "dependencies": {
     "@okgrow/graphql-scalars": "^0.4.2",
     "apollo-server": "^2.2.2",
+    "apollo-server-express": "^2.2.5",
+    "express": "^4.16.4",
     "fs": "0.0.1-security",
     "graphql": "^14.0.2",
     "graphql-fields": "^1.3.0",
+    "graphql-subscriptions": "^1.0.0",
+    "http": "0.0.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.12",
     "path": "^0.12.7",
-    "properties": "^1.2.1"
+    "properties": "^1.2.1",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "devDependencies": {
     "webpack": "^4.25.1",
